--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,9 +7,13 @@ services:
       # Pickup the AWS secret and access key from host env
       - AWS_SECRET_ACCESS_KEY
       - AWS_ACCESS_KEY_ID
+      - AWS_DEFAULT_REGION
+      - MOZETL_COMMAND
+      - MOZETL_GIT_PATH
+      - MOZETL_GIT_BRANCH
+      - MOZETL_SPARK_MASTER
+      - MOZETL_SUBMISSION_METHOD
     build: .
-    ports:
-      - "8000:8000"
     volumes:
       - .:/app
     command:
