--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,10 +1,3 @@
-# These environment variables must be set in CircleCI UI
-#
-# GCLOUD_SERVICE_KEY - key for pushing images to gcr
-# GOOGLE_PROJECT_ID - moz-fx-data-airflow-prod-88e0
-# GOOGLE_COMPUTE_ZONE - us-west1-b
-#
-
 version: 2
 jobs:
   build:
@@ -74,6 +67,7 @@ workflows:
               only: /.*/
 
       - deploy:
+          context: data-eng-airflow-gcr
           requires:
             - test
           filters:
